force-app/main/default/objects/Batch_Calculator__c/Batch_Calculator__c.object-meta.xml
<CustomObject>
    <label>Batch Calculator</label>
    <nameField>
        <displayFormat>CALC-{0000}</displayFormat>
        <label>Batch Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Calculator</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>