force-app/main/default/objects/Batch_Calculator__c/fields/Account_finance__c.field-meta.xml
<CustomField>
    <fullName>Account_finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_finance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leasing Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batch Calculator</relationshipLabel>
    <relationshipName>Batch_Calculator</relationshipName>
    <type>Lookup</type>
</CustomField>