force-app/main/default/objects/Batch_Calculator__c/fields/batch_relationship__c.field-meta.xml
<CustomField>
    <fullName>batch_relationship__c</fullName>
    <label>batch relationship</label>
    <referenceTo>vehicleBatch__c</referenceTo>
    <relationshipLabel>Batch Calculator</relationshipLabel>
    <relationshipName>Batch_Calculator</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>