force-app/main/default/objects/Batch_Calculator__c/fields/Car_Group__c.field-meta.xml
<CustomField>
    <fullName>Car_Group__c</fullName>
    <label>Car Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Group</valueSetName>
    </valueSet>
</CustomField>