force-app/main/default/objects/Batch_Calculator__c/fields/Contract_fee__c.field-meta.xml
<CustomField>
    <fullName>Contract_fee__c</fullName>
    <defaultValue>750</defaultValue>
    <label>Contract fee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>