force-app/main/default/objects/Batch_Calculator__c/fields/Contract_fee_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Contract_fee_Valuta__c</fullName>
    <label>Contract fee (Valuta)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>