force-app/main/default/objects/Batch_Calculator__c/fields/Damages__c.field-meta.xml
<CustomField>
    <fullName>Damages__c</fullName>
    <description>Estimation for damages costs</description>
    <label>Damages estimate for period</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>