force-app/main/default/objects/Batch_Calculator__c/fields/Decision_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decision_Comments__c</fullName>
    <description>why the calculation was or wasn&apos;t Selected</description>
    <inlineHelpText>why the calculation was or wasn&apos;t Selected</inlineHelpText>
    <label>Decision Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>