force-app/main/default/objects/Batch_Calculator__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <description>Cost of delivery from supplier</description>
    <label>Delivery costs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>