force-app/main/default/objects/Batch_Calculator__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <formula>IF(
Difference__c &lt; 0,
Difference__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>