force-app/main/default/objects/Batch_Calculator__c/fields/Depreciation_Full_Tax__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Full_Tax__c</fullName>
    <formula>IF(
Diffrence_Full_Tax__c &lt; 0,
Diffrence_Full_Tax__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF(
Diffrence_Full_Tax__c &lt; 0,
Diffrence_Full_Tax__c,
0
)</inlineHelpText>
    <label>Depreciation - Full Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>