force-app/main/default/objects/Batch_Calculator__c/fields/Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>Description_Formula__c</fullName>
    <formula>batch_relationship__r.Name &amp; &quot;-&quot; &amp; Vehicle_Group__r.Name &amp; &quot;-&quot; &amp; TEXT(Period__c) &amp; &quot;-&quot; &amp;  TEXT(Status__c)</formula>
    <label>Description (Formula)</label>
    <type>Text</type>
</CustomField>