force-app/main/default/objects/Batch_Calculator__c/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <formula>Sales_price__c - Total_buy_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>