force-app/main/default/objects/Batch_Calculator__c/fields/Diffrence_Full_Tax__c.field-meta.xml
<CustomField>
    <fullName>Diffrence_Full_Tax__c</fullName>
    <formula>Remarketing_Price_Full_Tax__c  -  Full_Tax_buy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diffrence - Full Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>