force-app/main/default/objects/Batch_Calculator__c/fields/Full_Tax_buy__c.field-meta.xml
<CustomField>
    <fullName>Full_Tax_buy__c</fullName>
    <formula>Total_buy_price__c * 1.25  +  Total_registration_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total buy price - Full Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>