force-app/main/default/objects/Batch_Calculator__c/fields/Full_Tax_Car_Cost_for_period__c.field-meta.xml
<CustomField>
    <fullName>Full_Tax_Car_Cost_for_period__c</fullName>
    <formula>Ownership_tax_period__c + Insurance_cost_for_period__c + Onboard_Offboard_reduction__c + Damages__c + Tires_Service__c + Contract_fee__c + Interest_for_period_full_tax_car__c - Depreciation_Full_Tax__c -  Refusion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full tax car - Cost for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>