force-app/main/default/objects/Batch_Calculator__c/fields/Full_tax_car_Cost_per_month__c.field-meta.xml
<CustomField>
    <fullName>Full_tax_car_Cost_per_month__c</fullName>
    <formula>Full_Tax_Car_Cost_for_period__c / Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full_Tax_Car_Cost_for_period__c / Period__c</inlineHelpText>
    <label>Full tax car - Cost per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>