force-app/main/default/objects/Batch_Calculator__c/fields/Handling_Cost__c.field-meta.xml
<CustomField>
    <fullName>Handling_Cost__c</fullName>
    <description>Handling cost from the Dealer</description>
    <label>Handling Cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>