force-app/main/default/objects/Batch_Calculator__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText>Insurance should be entered for monthly basis</inlineHelpText>
    <label>Insurance cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>