force-app/main/default/objects/Batch_Calculator__c/fields/Insurance_cost_for_period__c.field-meta.xml
<CustomField>
    <fullName>Insurance_cost_for_period__c</fullName>
    <formula>Insurance__c  *  Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance cost for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>