force-app/main/default/objects/Batch_Calculator__c/fields/Interest_for_period__c.field-meta.xml
<CustomField>
    <fullName>Interest_for_period__c</fullName>
    <formula>Total_buy_price__c  *  Intrest_rate_financing__c  / 12 *  Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>