force-app/main/default/objects/Batch_Calculator__c/fields/Interest_for_period_full_tax_car__c.field-meta.xml
<CustomField>
    <fullName>Interest_for_period_full_tax_car__c</fullName>
    <formula>Full_Tax_buy__c  * Intrest_rate_financing__c / 12 * Period__c</formula>
    <inlineHelpText>Full_Tax_buy__c * Intrest_rate_financing__c / 12 * Period__c</inlineHelpText>
    <label>Interest for period - full tax car</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>