force-app/main/default/objects/Batch_Calculator__c/fields/Interest_for_period_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Interest_for_period_Valuta__c</fullName>
    <formula>Total_buy_price__c * Interest_rate_Financing_Valuta__c / 12 * Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total_buy_price__c * Interest_rate_Financing_Valuta__c / 12 * Period__c</inlineHelpText>
    <label>Interest for period (Valuta)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>