force-app/main/default/objects/Batch_Calculator__c/fields/Interest_rate_Financing_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Interest_rate_Financing_Valuta__c</fullName>
    <label>Interest rate - Financing (Valuta)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>