force-app/main/default/objects/Batch_Calculator__c/fields/Interest_towards_Tax__c.field-meta.xml
<CustomField>
    <fullName>Interest_towards_Tax__c</fullName>
    <label>Interest Tax authorities</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>