force-app/main/default/objects/Batch_Calculator__c/fields/Intrest_for_financing__c.field-meta.xml
<CustomField>
    <fullName>Intrest_for_financing__c</fullName>
    <description>Interest cost towards financing partner.</description>
    <label>Financing interest cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>