force-app/main/default/objects/Batch_Calculator__c/fields/Intrest_rate_financing__c.field-meta.xml
<CustomField>
    <fullName>Intrest_rate_financing__c</fullName>
    <label>Interest Rate - Financing</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>