force-app/main/default/objects/Batch_Calculator__c/fields/L94_Car_Cost_for_period__c.field-meta.xml
<CustomField>
    <fullName>L94_Car_Cost_for_period__c</fullName>
    <formula>Ownership_tax_period__c + Insurance_cost_for_period__c + Onboard_Offboard_reduction__c + Proportional_registration_fee__c + Damages__c + Tires_Service__c + Contract_fee__c + Interest_for_period__c - Depreciation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ownership_tax_period__c + Insurance_cost_for_period__c + Onboard_Offboard_reduction__c + Proportional_registration_fee__c + Damages__c + Tires_Service__c + Contract_fee__c + Interest_for_period__c - Depreciation__c</inlineHelpText>
    <label>L94 Car - Cost for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>