force-app/main/default/objects/Batch_Calculator__c/fields/L94_Car_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>L94_Car_Monthly_Cost__c</fullName>
    <formula>L94_Car_Cost_for_period__c / Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L94 Car - Monthly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>