force-app/main/default/objects/Batch_Calculator__c/fields/L94_registration_tax__c.field-meta.xml
<CustomField>
    <fullName>L94_registration_tax__c</fullName>
    <label>L94 registration tax</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>