force-app/main/default/objects/Batch_Calculator__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <description>This field will hold the cost for license plate from the dealer.</description>
    <label>License Plate costs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>