force-app/main/default/objects/Batch_Calculator__c/fields/Onboard_Offboard_reduction__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Offboard_reduction__c</fullName>
    <defaultValue>600</defaultValue>
    <label>Infleet / Defleet costs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>