force-app/main/default/objects/Batch_Calculator__c/fields/Ownership_tax_6_months__c.field-meta.xml
<CustomField>
    <fullName>Ownership_tax_6_months__c</fullName>
    <inlineHelpText>Ownership tax should be entered for 6 month period.</inlineHelpText>
    <label>Ownership tax per 6 months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>