force-app/main/default/objects/Batch_Calculator__c/fields/Ownership_tax_period__c.field-meta.xml
<CustomField>
    <fullName>Ownership_tax_period__c</fullName>
    <formula>Ownership_tax_6_months__c  / 6 *  Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ownership_tax__c / 6 * Period__c</inlineHelpText>
    <label>Ownership tax for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>