force-app/main/default/objects/Batch_Calculator__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <inlineHelpText>Length in month that SIXT will hold the vehicle</inlineHelpText>
    <label>Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>