force-app/main/default/objects/Batch_Calculator__c/fields/Proportional_registration_fee__c.field-meta.xml
<CustomField>
    <fullName>Proportional_registration_fee__c</fullName>
    <formula>L94_registration_tax__c  + Interest_towards_Tax__c  + Regulated_tax_at_re_calculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proportional registration fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>