force-app/main/default/objects/Batch_Calculator__c/fields/Refusion__c.field-meta.xml
<CustomField>
    <fullName>Refusion__c</fullName>
    <label>Refusion</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>