force-app/main/default/objects/Batch_Calculator__c/fields/Regulated_tax_at_re_calculation__c.field-meta.xml
<CustomField>
    <fullName>Regulated_tax_at_re_calculation__c</fullName>
    <formula>IF(
 Period__c &gt; 3,
 Total_registration_tax__c * 0.06 / 100 * Period__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regulated tax at re-calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>