force-app/main/default/objects/Batch_Calculator__c/fields/Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement__c</fullName>
    <inlineHelpText>Reimbursement %</inlineHelpText>
    <label>Reimbursement percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>