force-app/main/default/objects/Batch_Calculator__c/fields/Reimbursement_calc__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_calc__c</fullName>
    <formula>Reimbursement__c * L94_registration_tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reimbursement__c * L94_registration_tax__c</inlineHelpText>
    <label>Reimbursement calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>