force-app/main/default/objects/Batch_Calculator__c/fields/Remarketing_Price_Full_Tax__c.field-meta.xml
<CustomField>
    <fullName>Remarketing_Price_Full_Tax__c</fullName>
    <label>Remarketing Price - Full Tax</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>