force-app/main/default/objects/Batch_Calculator__c/fields/Remarketing_Price_with__c.field-meta.xml
<CustomField>
    <fullName>Remarketing_Price_with__c</fullName>
    <label>Remarketing Price with full tax</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>