force-app/main/default/objects/Batch_Calculator__c/fields/Sales_price__c.field-meta.xml
<CustomField>
    <fullName>Sales_price__c</fullName>
    <label>Future Value (FV)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>