force-app/main/default/objects/Batch_Calculator__c/fields/Steel_price__c.field-meta.xml
<CustomField>
    <fullName>Steel_price__c</fullName>
    <label>Steel price</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>