force-app/main/default/objects/Batch_Calculator__c/fields/Tires_Service__c.field-meta.xml
<CustomField>
    <fullName>Tires_Service__c</fullName>
    <description>Cost for tires and service</description>
    <label>Tires &amp; Service</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>