force-app/main/default/objects/Batch_Calculator__c/fields/Total_buy_price__c.field-meta.xml
<CustomField>
    <fullName>Total_buy_price__c</fullName>
    <formula>Total_establishing_cost__c  +  Steel_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total_establishing_cost__c + Steel_price__c</inlineHelpText>
    <label>Total buy price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>