force-app/main/default/objects/Batch_Calculator__c/fields/Total_cost_month__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_month__c</fullName>
    <label>Total cost per month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>