force-app/main/default/objects/Batch_Calculator__c/fields/Total_establishing_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_establishing_cost__c</fullName>
    <description>License_Plate__c  +  Delivery__c  +  Handling_Cost__c = Total establishing cost</description>
    <formula>License_Plate__c  +  Delivery__c  +  Handling_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>License_Plate__c  +  Delivery__c  +  Handling_Cost__c = Total establishing cost</inlineHelpText>
    <label>Total establishing cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>