force-app/main/default/objects/Batch_Calculator__c/fields/Total_registration_tax__c.field-meta.xml
<CustomField>
    <fullName>Total_registration_tax__c</fullName>
    <label>Total registration tax - single payment</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>