force-app/main/default/objects/Batch_Calculator__c/fields/Valuta_Car_monthy_cost__c.field-meta.xml
<CustomField>
    <fullName>Valuta_Car_monthy_cost__c</fullName>
    <formula>Valuta_Car_period__c  /  Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valuta Car - Monthly Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>