force-app/main/default/objects/Batch_Calculator__c/fields/Valuta_Car_period__c.field-meta.xml
<CustomField>
    <fullName>Valuta_Car_period__c</fullName>
    <formula>Ownership_tax_period__c + Insurance_cost_for_period__c + Onboard_Offboard_reduction__c  +  Damages__c  +  Tires_Service__c  +  Contract_fee_Valuta__c + Interest_for_period_Valuta__c - Depreciation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ownership_tax_period__c + Insurance_cost_for_period__c + Onboard_Offboard_reduction__c  +  Damages__c  +  Tires_Service__c  +  Contract_fee_Valuta__c + Interest_for_period_Valuta__c - Depreciation__c</inlineHelpText>
    <label>Valuta Car - Cost for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>