force-app/main/default/objects/Batch_Calculator__c/fields/Vehicle_Group__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select correct vehicle group for calculations</inlineHelpText>
    <label>Vehicle Group</label>
    <referenceTo>Vehicle_Group__c</referenceTo>
    <relationshipLabel>Batch Calculator</relationshipLabel>
    <relationshipName>Batch_Calculator</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>