force-app/main/default/objects/Batch_Calculator__c/validationRules/DecisionComment_mandatory_for_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>DecisionComment_mandatory_for_Selected</fullName>
    <active>true</active>
    <description>Comments is required before status is set to Selected</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Selected&quot;)
&amp;&amp; ISBLANK(Decision_Comments__c)</errorConditionFormula>
    <errorDisplayField>Decision_Comments__c</errorDisplayField>
    <errorMessage>Please provide comments why the calculation is selected!</errorMessage>
</ValidationRule>