force-app/main/default/objects/Batch_Calculator__c/validationRules/Leasing_Account_mandatory_for_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Leasing_Account_mandatory_for_Selected</fullName>
    <active>true</active>
    <description>Leasing account need to be chosen for Selected calculator</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Selected&apos;)
&amp;&amp;
ISBLANK(Account_finance__c)</errorConditionFormula>
    <errorDisplayField>Account_finance__c</errorDisplayField>
    <errorMessage>Please select Leasing Account before mark calculator as Selected</errorMessage>
</ValidationRule>