force-app/main/default/objects/Batch_Calculator__c/validationRules/Max_Period_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Period_Length</fullName>
    <active>true</active>
    <description>max period length because of Damage and Service data is defined only for 36 months</description>
    <errorConditionFormula>Period__c &gt; 36</errorConditionFormula>
    <errorDisplayField>Period__c</errorDisplayField>
    <errorMessage>Max period length is 36 months</errorMessage>
</ValidationRule>