force-app/main/default/objects/Batch_Calculator__c/validationRules/Only_one_can_be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_can_be_Selected</fullName>
    <active>false</active>
    <description>Only one Calculation can be selected on a batch
UPDATED REQUIREMENT: user shall be able to select several calculators</description>
    <errorConditionFormula>ISCHANGED(Status__c) 
&amp;&amp; ISPICKVAL(Status__c, &quot;Selected&quot;) 
&amp;&amp; batch_relationship__r.System_Number_of_Selected_Calculations__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only 1 calculation can be selected on a vehicle batch!</errorMessage>
</ValidationRule>