force-app/main/default/objects/Batch_Calculator__c/validationRules/Remarketing_price_mandatory_for_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarketing_price_mandatory_for_Selected</fullName>
    <active>true</active>
    <description>Leasing account need to be chosen for Selected calculator</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Selected&apos;)
&amp;&amp;
ISBLANK(Sales_price__c)</errorConditionFormula>
    <errorDisplayField>Sales_price__c</errorDisplayField>
    <errorMessage>Please fill in Re-marketing price before mark calculator as Selected</errorMessage>
</ValidationRule>